Capstone Project Module 2.ipynb

--- a/Capstone Project Module 2.ipynb
+++ b/Capstone Project Module 2.ipynb
@@ -2122,7 +2122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Recommendations:\n",
+    "Rekommendasi:\n",
     "- Disarankan perusahan Untuk memperluas tim dan jaringan Anda di wilayah ini, perushaan harus mempertimbangkan untuk membentuk tim penjualan dan memanfaatkan potensi penjualan yang kuat di masing-masing negara tersebut. \n",
     "- Perusahaan diharapkan mertimbangkan untuk menyesuaikan penawaran produk dan strategi pemasaran Anda untuk secara khusus menargetkan pada industri ini.\n",
     "- Perusahaan disarankan untuk mengalokasikan lebih banyak sumber daya dan fokus untuk lebih meningkatkan dan mengembankan produk-produk seperti eperti 'SaaS Connector Pack-Gold', Alchemy, Storage, Support, and Data Smasher.\n",
